--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "wrap-fn": "^0.1.4"
   },
   "devDependencies": {
+    "browserify": "^9.0.8",
     "es6-promise": "^2.1.1",
     "mocha": "*"
   },
