working with fixed and transform. removed catch for now until i better understand the usecase

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "foreach": "^2.0.5",
+    "is-generator": "^1.0.2",
     "sliced": "0.0.5",
     "wrap-fn": "^0.1.4",
     "wrapped": "^1.0.0"
