--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "browserify": "^9.0.8",
+    "co-mocha": "^1.1.2",
     "es6-promise": "^2.1.1",
     "mocha": "*"
   },
