--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "wrapped": "^1.0.0"
   },
   "devDependencies": {
+    "browserify": "^13.0.0",
     "co-mocha": "^1.1.2",
     "mocha": "^2.4.5"
   },
