--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "err-candy": "^1.0.1",
+    "es6-promise": "^3.1.2",
     "lodash.compact": "^3.0.0",
     "sliced": "^1.0.1",
     "wrapped": "^1.0.0"
