--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "co-bind": "^1.0.0",
     "co-mocha": "^1.1.2",
     "mocha": "^2.4.5"
   },
