--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git://github.com/lapwinglabs/vo.git"
   },
   "dependencies": {
-    "err-candy": "^1.0.1",
+    "combine-errors": "1.0.1",
     "es6-promise": "^3.1.2",
     "lodash.compact": "^3.0.0",
     "sliced": "^1.0.1",
