--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "promises",
     "synchronous"
   ],
-  "author": "Matthew Mueller <matt@lapwinglabs.com>",
+  "author": "Matthew Mueller <matt@matthewmueller.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/lapwinglabs/vo.git"
+    "url": "git://github.com/matthewmueller/vo.git"
   },
   "dependencies": {
     "any-promise": "1.3.0",
