--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "any-promise": "1.3.0",
     "co": "3.1.0",
     "combine-errors": "3.0.2",
+    "debug": "2.2.0",
     "lodash.compact": "^3.0.0",
     "sliced": "^1.0.1",
     "wrapped": "^1.0.0"
@@ -27,7 +28,8 @@
     "browserify": "^13.0.0",
     "co-bind": "^1.0.0",
     "co-mocha": "^1.1.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "popsicle": "6.2.1"
   },
   "main": "index",
   "bin": {
