--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "dependencies": {
     "any-promise": "1.3.0",
     "co": "3.1.0",
-    "combine-errors": "3.0.2",
+    "combine-errors": "2",
     "debug": "2.2.0",
-    "lodash.compact": "^3.0.0",
-    "sliced": "^1.0.1",
-    "wrapped": "^1.0.0"
+    "sliced": "^1.0.1"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
